@@ -1,7 +1,10 @@
 package it.unicam.cs.gui.controller;
 
 import it.unicam.cs.api.components.container.Resources;
+import it.unicam.cs.gui.util.CanvasTools;
+import javafx.beans.value.ChangeListener;
 import javafx.fxml.FXML;
+import javafx.geometry.Bounds;
 import javafx.scene.control.Button;
 import javafx.scene.control.SplitPane;
 import javafx.scene.image.ImageView;
@@ -31,46 +34,86 @@ public class GameSetupSceneController extends SceneController {
     private AnchorPane canvasPane;
     @FXML
     private Button backButton;
+    @FXML
+    private Button previousMapButton;
+    @FXML
+    private Button nextMapButton;
 
+    /** All the present maps files */
     private List<File> mapsFiles = new ArrayList<>();
+    /** The map preview */
+    ImageView mapView = new ImageView();
+    /** The layout listener, used to resize the map preview */
+    ChangeListener<Bounds> layoutListener;
+
 
     public void initialize() throws URISyntaxException, IOException {
         mapsFiles = Resources.getAllFilesInDirectory(
                 MAPS_DIRECTORY_PATH,
                 F1_MAP_FILE_EXTENSION
         );
-        System.out.println(mapsFiles);
-        selectedMap = mapsFiles.get(0);
-        loadMap(selectedMap);
+        initMapPreviewListener();
+        loadMap(mapsFiles.getFirst());
     }
 
+    /**
+     * Load the map from the parsed file. It's a preview of the Track with the track markers.
+     * <b>THE MRTHOD RENDERS THE PREVIEW AS AN IMAGE... STOPPAGE CODE, USE WITH CAUTION</b>
+     * @param mapFile the map file
+     */
     private void loadMap(File mapFile) {
         try {
             getGameMap(mapFile).ifPresent(gameMap -> {
-                WritableImage trackImage = gameMap.getTrackCanvas().getTrackSnapshot();
-                ImageView mapView = new ImageView(trackImage);
-
+                WritableImage trackImage = CanvasTools.createCanvasSnapshot(gameMap.getTrackCanvas());
+                mapView.setImage(trackImage);
                 mapView.setPreserveRatio(true);
-
-                //layoutBounds
-                canvasPane.layoutBoundsProperty().addListener((observable, oldValue, newValue) -> {
-                    mapView.fitWidthProperty().bind(canvasPane.widthProperty());
-                    mapView.fitHeightProperty().bind(canvasPane.heightProperty());
-
-                    if (!canvasPane.getChildren().contains(mapView)) {
-                        canvasPane.getChildren().add(mapView);
-                    }
-                });
             });
         } catch (URISyntaxException | IOException e) {
             e.printStackTrace();
         }
     }
 
+    /**
+     * Initialize the map preview listener.
+     */
+    private void initMapPreviewListener(){
+        layoutListener = (observable, oldValue, newValue) -> {
+            mapView.fitWidthProperty().bind(canvasPane.widthProperty());
+            mapView.fitHeightProperty().bind(canvasPane.heightProperty());
+
+            if (!canvasPane.getChildren().contains(mapView)) {
+                canvasPane.getChildren().add(mapView);
+            }
+        };
+        canvasPane.layoutBoundsProperty().addListener(layoutListener);
+    }
 
 
+    /**
+     * Go back to the welcome scene.
+     */
     @FXML
     private void backButtonClick() {
         changeScene(WELCOME_SCENE_FXML);
+    }
+
+    /** internal counter to keep track of the current map index */
+    private int currentMapIndex = 0;
+    /**
+     * Load the next map.
+     */
+    @FXML
+    private void nextMapButtonClick() {
+        currentMapIndex = (currentMapIndex + 1) % mapsFiles.size();
+        loadMap(mapsFiles.get(currentMapIndex));
+    }
+
+    /**
+     * Load the previous map.
+     */
+    @FXML
+    private void previousMapButtonClick() {
+        currentMapIndex = (currentMapIndex - 1 + mapsFiles.size()) % mapsFiles.size();
+        loadMap(mapsFiles.get(currentMapIndex));
     }
 }
